--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  </head>
  <body>
      <header>
-     <h1>Carlos Cordero Portal</h1>
+     <h1>| Carlos Cordero | Aspiring Software Developer |</h1>
         <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
             <a href="https://carloscordero1.github.io/Stylin-with-CSS/" target="_blank">Stylin With CSS</a>
