Added Time of Day

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <a href="https://replit.com/@CarlosCordero3/html-only#index.html" target="_blank">HTML Elements</a>
             <a href="https://github.com/carloscordero1" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/carlos--cordero/" target="_blank">LinkedIn</a>
+            <a href="https://carloscordero1.github.io/Time-of-Day/" target="_blank">Time of Day with JavaScript</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </nav>
      </header>
