--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <a href="https://carloscordero1.github.io/Stylin-with-CSS/" target="_blank">Stylin With CSS</a>
             <a href="https://carloscordero1.github.io/explore-california/" target="_blank">Explore Oregon</a>
             <a href="https://replit.com/@CarlosCordero3/html-only#index.html" target="_blank">HTML Elements</a>
+            <a href="https://carloscordero1.github.io/Time-of-Day/" target="_blank">Time of Day with JavaScript</a>
             <a href="https://github.com/carloscordero1" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/carlos--cordero/" target="_blank">LinkedIn</a>
-            <a href="https://carloscordero1.github.io/Time-of-Day/" target="_blank">Time of Day with JavaScript</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </nav>
      </header>
@@ -67,6 +67,17 @@
           <a id="css-checker" href="#">Check CSS</a></small>
      </p>
     </footer>
+  </main>
+  <main>
+    <h1 style="color:rgb(0, 0, 0);text-align:center;">A Day in the Life</h1>\
+    <hr>
+    <picture>
+     <source media="(min-width: 1200px)">
+     <source media="(min-width: 501px)">
+     <img src="images/Coding 2.jpg" alt="Me coding again" class="center">
+     
+     <img src="images/Coding.jpg" alt="Me coding" class="center">
+     </picture> 
   </main>
      
   <!-- Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon -->
