--- a/index.html
+++ b/index.html
@@ -78,6 +78,57 @@
      
      <img src="images/Coding.jpg" alt="Me coding" class="center">
      </picture> 
+     <section id="two" class="wrapper alt style2">
+
+        <section class="spotlight">
+            <div>
+                <embed src="images/demonstration video.mp4" autostart="true" height="529" width="748" />
+            </div><div class="content">
+                <h2>JavaScript Jest Test Demonstration</h2>
+            </div>
+        </section>
+        <section class="spotlight">
+                <embed src="images/Final 30 second pitch.mp4" autostart="true" height="529" width="748" />
+                <h2>30 Second Pitch</h2>
+            </div>
+        </section>
+    </section>
+    <section>
+        <h2>Resume</h2>
+        <h5>Employment</h5>
+        <ul>
+            <li>Washington State Patrol | Olympia,WA | December 2019 - June 2021</li>
+            <li>The UPS Store | Auburn, WA | October 2017 - October 2019</li>
+        </ul>
+        <h5>Education</h5>
+        <ul>
+            <li>Year Up/Seattle Central College | Seattle, WA | September 2021 - Present</li>
+            <li>University of Washington | Tacoma, WA | March 2017 - March 2018</li>
+            <li>Highline Community College | Des Moines, WA | September 2014 - September 2017</li>
+        </ul>
+        <h5>Relevant Skills</h5>
+        <ul>
+            <li>Google Apps</li>
+            <li>Adobe Illustrator</li>
+            <li>GitHub</li>
+            <li>CSS</li>
+            <li>HTML</li>
+            <li>Software Testing</li>
+            <li>Microsoft Office Suite</li>
+            <li>Email</li>
+            <li>Google Drive</li>
+        </ul>
+    </section>
+
+    <section>						<div class="inner">
+        <header>
+            <h2>Resume</h2>
+        </header>
+        <ul class="actions stacked">
+            <li><a href="Resume/resume.pdf" class="button fit primary">Download</a></li>
+        </ul>
+    </div>
+</section></section>
   </main>
      
   <!-- Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon -->
