--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
      <h1>| Carlos Cordero | Aspiring Quality Assurance Tester |</h1>
         <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
+            <a href="https://carloscordero1.github.io/Seasonal-Styles/" target="_blank">Seasonal-Styles</a>
             <a href="https://carloscordero1.github.io/Dom-Play/" target="_blank">DOM-Play</a>
             <a href="https://carloscordero1.github.io/Data-Processing/" target="_blank">Data Processing</a>
             <a href="https://carloscordero1.github.io/Daily-Grind/" target="_blank">Daily Grind</a>
-            <a href="https://replit.com/@CarlosCordero3/html-only#index.html" target="_blank">HTML Elements</a>
             <a href="https://carloscordero1.github.io/Time-of-Day/" target="_blank">Time of Day with JavaScript</a>
             <a href="https://github.com/carloscordero1" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/carlos--cordero/" target="_blank">LinkedIn</a>
