Replaces an old link with "Pet Adoption" link in index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="https://carloscordero1.github.io/Dom-Play/" target="_blank">DOM-Play</a>
             <a href="https://carloscordero1.github.io/Data-Processing/" target="_blank">Data Processing</a>
             <a href="https://carloscordero1.github.io/Daily-Grind/" target="_blank">Daily Grind</a>
-            <a href="https://carloscordero1.github.io/Time-of-Day/" target="_blank">Time of Day with JavaScript</a>
+            <a href="https://Ajax-Pet-Adoption.carloscordero3.repl.co" target="_blank">Pet Adoption</a>
             <a href="https://github.com/carloscordero1" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/carlos--cordero/" target="_blank">LinkedIn</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
